# NDR-python

./: AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: PORT_STATUS.md
docs/developer_notes/: PYTHON_PORTING_GUIDE.md  ndr_matlab_python_bridge.yaml  ndr_xlang_principles.md  symmetry_tests.md
src/ndr/: __init__.py  globals.py  known_readers.py  reader_wrapper.py
src/ndr/data/: __init__.py  assign.py  colvec.py  ndr_matlab_python_bridge.yaml  rowvec.py  struct2namevaluepair.py
src/ndr/file/: textfile2char.py
src/ndr/format/axon/: __init__.py  abfTimeToDatetime.py  ndr_matlab_python_bridge.yaml  read_abf.py  read_abf_header.py
src/ndr/format/binarymatrix/: __init__.py  ndr_matlab_python_bridge.yaml  read.py
src/ndr/format/bjg/: __init__.py  ndr_matlab_python_bridge.yaml  read.py  read_bjg_header.py
src/ndr/format/ced/: __init__.py  ndr_matlab_python_bridge.yaml  read_SOMSMR_datafile.py  (+2 more)
src/ndr/fun/: bitDepth.py  getDataTypeString.py  ndr_matlab_python_bridge.yaml  ndrpath.py  ndrresource.py
src/ndr/reader/: __init__.py  axon_abf.py  base.py  bjg.py  ced_smr.py  dabrowska.py  intan_rhd.py  ndr_matlab_python_bridge.yaml  neo.py  somecompany_someformat.py  spikegadgets_rec.py  tdt_sev.py  whitematter.py
src/ndr/resource/: ndr_reader_types.json
src/ndr/string/: channelstring2channels.py  intseq2str.py  ndr_matlab_python_bridge.yaml  str2intseq.py
src/ndr/time/: __init__.py  clocktype.py  ndr_matlab_python_bridge.yaml  timereference.py
tests/: test_reader_base.py  test_readers.py
tests/symmetry/: conftest.py
(+67 files in other folders)
